--- a/index.html
+++ b/index.html
@@ -1794,7 +1794,7 @@ function updateLearnersTable() {
 
           
           // Hardcoded credentials (for demonstration purposes)
-        const validUsername = "KikuyuTownship254";
+        const validUsername = "New254";
         const validPassword = "Nm643PpQ@";
 
         // Login form submission
