--- a/index.html
+++ b/index.html
@@ -3343,7 +3343,7 @@ function generateBulkReports() {
                     <div style="clear:both; padding-bottom:10px;">
                         ${schoolLogo}
                         <div style="margin-left:110px;">
-                            <h2 style="margin:0; font-size:20px;"> KIKUYU TOWNSHIP JUNIOR SCHOOL ASSESMENT REEPORT</h2>
+                            <h2 style="margin:0; font-size:20px;"> KIKUYU TOWNSHIP JUNIOR SCHOOL ASSESMENT REPORT</h2>
                             <h3 style="margin:0; font-size:16px;">P.O BOX 104-00902 Kikuyu</h3>
                             <h4 style="margin:0; font-size:14px;">Ministry Of Education Science And Technology</h4>
                         </div>
